Cuarto Commit: finalizacion

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>KevinFilix: Las mejores a tu alcance</title>
+    <title>KRSFilix: Las mejores a tu alcance</title>
 </head>
 
 <body>
@@ -170,7 +170,7 @@
 
     <footer>
         <h3>Redes sociales</h3>
-        <p>&copy; 2024 KevinFilix. Todos los derechos reservados.</p>
+        <p>&copy; 2024 KRSFilix. Todos los derechos reservados.</p>
         <div style="margin: 10px 0;">
             <a href="https://www.facebook.com" target="_blank" style="margin: 0 10px;">
                 <img src="https://img.icons8.com/ios-filled/50/ffffff/facebook--v1.png" alt="Facebook"
